--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "TeraCommon"]
 	path = TeraCommon
-	url = https://github.com/neowutran/Tera
-[submodule "resources/data"]
+	url = https://github.com/michaelcarno/TeraCore
+[submodule "TeraDpsMeterData"]
 	path = resources/data
-	url = https://github.com/neowutran/TeraDpsMeterData
+	url = git@github.com:michaelcarno/TeraDpsMeterData.git
